--- a/test1.html
+++ b/test1.html
@@ -30,7 +30,7 @@
 	<hr>
 	<button class='btn' ng-click='editUser("new")'><span class='glyphicon glyphicon-user'>新增用户</span></button>
 	<hr>
-	<!--只做git使用测试-->
+	<!--做简单修改，查看git status-->
 	<h3 ng-show='edit'>创建新用户</h3>
 	<h3 ng-hide='edit'>编辑新用户</h3>
 
