--- a/test1.html
+++ b/test1.html
@@ -8,6 +8,7 @@
 </head>
 <body ng-app='myApp' ng-controller='userCtrl'>
 <div class='container'>
+	<!--星期一添加的注释-->
 	<h3>用户信息表</h3>
 	<table class='table table-bordered table-striped'>
 		<thead>
