--- a/bug.html
+++ b/bug.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>删除文件</title>
+	<title>bug分支</title>
 </head>
 <body>
-<!--我现在正在进行V1.2版本的开发-->
+	
 </body>
 </html>
